test/compare/testdata/misc/imported_but_not_used.go
// errorcheck

package main

import "fmt" // ERROR `imported and not used: "fmt"`

func main() {
	
}
